improving email report data

--- a/.gitignore
+++ b/.gitignore
@@ -128,5 +128,8 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-#ignore config files for privacy
+# ignore config files for privacy
 config.yaml
+
+# ignore reports
+*.csv
